# Lima-camera-pixy2

./: CMakeLists.txt  README.md  commands.txt
cmake/: FindPixLib.cmake  FindSDK.cmake
conda/camera/: bld.bat  build.sh  meta.yaml
conda/tango/: meta.yaml
doc/: index.rst
include/pixy2/: Camera.h  DetInfoCtrlObj.h  Interface.h  ShutterCtrlObj.h  SyncCtrlObj.h
pixy2_sdk/API/: get_raw_frame.cpp
pixy2_sdk/API/include/: libpixyusb2.h  usblink.h
pixy2_sdk/releases/firmware_LEGO/: pixy2_firmware-3.0.13-LEGO.hex  pixy2_firmware-3.0.14-LEGO.hex  pixy2_firmware-3.0.18-LEGO.hex
pixy2_sdk/releases/firmware_general/: pixy2_firmware-3.0.10-general.hex  pixy2_firmware-3.0.11-general.hex  pixy2_firmware-3.0.13-general.hex  pixy2_firmware-3.0.18-general.hex
pixy2_sdk/src/host/libpixyusb2/src/: Makefile
python/: Pixy2.py  __init__.py
sip/: Pixy2Camera.sip  Pixy2Interface.sip
src/: Pixy2Camera.cpp  Pixy2CameraInterface.cpp  Pixy2CameraUtils.cpp  Pixy2DetInfoCtrlObj.cpp  Pixy2Interface.cpp  Pixy2ShutterCtrlObj.cpp  Pixy2SyncCtrlObj.cpp
tango/: CMakeLists.txt  Pixy2.py
test/: CMakeLists.txt  test_api.py  test_pixy2.cpp
test1/: CMakeLists.txt  contours.cpp  conver.cpp  test3.cpp
test1/test2/: test.cpp
