cmake_minimum_required(VERSION 2.8)
project( test3 )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
# add_executable( test3 test3.cpp )
target_link_libraries( test3 ${OpenCV_LIBS} )
message(STATUS "foo include dir: ${OpenCV_INCLUDE_DIRS}")
message(STATUS "foo include dir: ${OpenCV_LIBS}")